<resources>
    <string name="app_name">Artact</string>

    <string name="title_home">Home</string>
    <string name="title_shop">Shop</string>
    <string name="title_add">Add</string>
    <string name="title_my_info">Profile</string>
    <string name="title_menu">Menu</string>

    <string name="text_login">Login</string>
    <string name="text_register">Register</string>

    <string name="text_id">id</string>
    <string name="text_pw">password</string>
    <string name="text_pw_confirm">password confirm</string>
    <string name="text_name">name</string>
    <string name="text_age">age</string>
    <string name="text_destination">destination</string>

    <string name="text_gallery">Gallery</string>

    <string name="error_empty">빈 칸 없이 입력해주세요</string>
    <string name="error_not_match">비밀번호가 다릅니다</string>
</resources>